refactor: Cleaning up spacing issues, typos and code

--- a/developer.html
+++ b/developer.html
@@ -2,16 +2,14 @@
 <html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8" >
-    <meta name="description" content="Portfolio of Jannaee Sick created with Google's Web Starter Kit.">
+    <meta name="description" content="Portfolio of Jannaee Sick">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="Jannaee Sick Web Portfolio">
     <meta itemprop="description" content="Jannaee Sick Web Portfolio">
     <link href='http://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
-
     <link rel="stylesheet" href="styles/components.css">
-
-    <title>Jannaee Sick - Web Developer</title>
+    <title>Jannaeé Sick</title>
   </head>
   <body class="page--styleguide">
 
