--- a/dynamicBanner.html
+++ b/dynamicBanner.html
@@ -2,15 +2,14 @@
 <html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8" >
-    <meta name="description" content="Portfolio of Jannaee Sick created with Google's Web Starter Kit.">
+    <meta name="description" content="Portfolio of Jannaee Sick">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="Jannaee Sick Web Portfolio">
     <meta itemprop="description" content="Jannaee Sick Web Portfolio">
     <link href='http://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
-
     <link rel="stylesheet" href="styles/components.css">
-
+	<title>Jannaeé Sick</title>
 	<!-- XML Call -->
 	<script>
 		function loadXMLDoc(dname){
@@ -23,10 +22,8 @@
 			xhttp.send();
 			return xhttp.responseXML;
 		}
-	</script>	
-
-	
-</head>
+	</script>
+  </head>
 	<body id="noRate">
 		<div id="ad1">
 			<div id="frameOne" class="animated fadeInLeft">
@@ -45,13 +42,11 @@
 					</script>
 				<p class="disclosure">*Rate/Annual Percentage Rate</p>
 			</div>
-
 			<div class="getARate">
 				<h4 class="animatedSlow fadeInUp"><a class="cta" href="#" target="_blank">
 					Get a personalized<br/>rate quote ></a>
 				</h4>
 			</div><!--end of get personalized rates-->
-
 			<div id="complianceLogo" class="animatedSlow fadeInUp">
 				<p class="disclosure">NMLS ID: 000000</p>
 				<img src="/images/workScreenshots/ehl.png" width="18" height="19">
