--- a/illustrator.html
+++ b/illustrator.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8" >
-    <meta name="description" content="Portfolio of Jannaee Sick created with Google's Web Starter Kit.">
+    <meta name="description" content="Portfolio of Jannaee Sick">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="Jannaee Sick Web Portfolio">
