--- a/index.html
+++ b/index.html
@@ -2,42 +2,24 @@
 <html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8" >
-    <meta name="description" content="Portfolio of Jannaee Sick created with Google's Web Starter Kit.">
+    <meta name="description" content="Portfolio of Jannaee Sick">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="Jannaee Sick Web Portfolio">
     <meta itemprop="description" content="Jannaee Sick Web Portfolio">
     <link href='http://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/components.css">
-    <title>Jannaee Sick</title>
+    <title>Jannaeé Sick</title>
   </head>
   <body class="page--index home">
     <div class="container home-featured-section">
-        <img src="/images/ego-onload.svg"> 
-        <div id="foot" class="container">
-          <h4 class="g-medium-half g-wide--1"><a href="developer.html">developer</a></h4>
-          <h4 class="g-medium-half g-wide--1"><a href="tinkerer.html">robotics tinkerer</a></h4>
-          <h4 class="g-medium-half g-medium--last g-wide--1 g-wide--last"><a href="3dhacker.html">3D hacker</a></h4>
-          <h4 class="g-medium-half g-wide--1"><a href="animal-lover.html">animal lover</a> </h4>
-         <!--
-          <a href="collector.html">jewelry collector</a>
-          <a href="illustrator.html">illustrator</a>
-          <-->              
-        </div>  
-
-        <!-- <p class="g--half g--centered"><a href=""><img src="/images/icons/socialIconsPlaceholder.svg"></a></p>  -->
+      <img src="/images/ego-onload.svg"> 
+      <div id="foot" class="container">
+        <h4 class="g-medium-half g-wide--1"><a href="developer.html">developer</a></h4>
+        <h4 class="g-medium-half g-wide--1"><a href="tinkerer.html">robotics tinkerer</a></h4>
+        <h4 class="g-medium-half g-medium--last g-wide--1 g-wide--last"><a href="3dhacker.html">3D hacker</a></h4>
+        <h4 class="g-medium-half g-wide--1"><a href="animal-lover.html">animal lover</a> </h4>
+      </div>  
     </div>
-
-    <!-- <div class="container"> -->
-    <!-- <hr style="border-color:black;" /> -->
-    <!-- <h4>get in touch</h4> -->
-    <!-- Next version use icons -->
-<!--       <nav>
-        <a class="small" href="www.facebook.com/jannaee" target="_blank">facebook</a>
-        <a class="small" href="www.linkedin.com/in/jannaee" target="_blank">linkedin</a>
-        <a class="small" href="www.sickfindings.tumblr.com" target="_blank">tumblr</a>
-        <a class="small" href="https://github.com/jannaee" target="_blank">github</a>              
-      </nav> -->
-    <!-- </div> -->
   </body>
 </html>
