--- a/missing.html
+++ b/missing.html
@@ -1,56 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>404 (Page Not Found) Error - Ever feel like you're in the wrong place?</title>
-
-<link href="http://p3nlhclust404.shr.prod.phx3.secureserver.net/SharedContent/404-etc-styles.css" rel="stylesheet" type="text/css" media="screen" />
-
-</head>
-
-<body>
-
-	<div class="body-404">
-		<h1>
-			<span>Ever feel you're in the wrong place</span>
-		</h1>
-		
-		<div class="info-container">
-			<div class="inner-border clear-fix">
-				<h2 class="info-top">
-					404 (Page Not Found) Error
-				</h2>
-				
-				<div class="site-owner-404">
-					<h3>If you're the <strong>site owner,</strong> one of two things happened:</h3>
-					<ol>
-						<li>
-							1) You entered an incorrect URL into your browser's address bar, or
-						</li>
-						<li>
-							2) You haven't uploaded content.
-						</li>
-					</ol>
-				</div>
-				
-				<div class="site-visitor-404">
-					<h3>If you're a <strong>visitor</strong> and not sure what happened:</h3>
-					<ol>
-						<li>
-							1) You entered or copied the URL incorrectly or
-						</li>
-						<li>
-							2) The link you used to get here is faulty.
-						</li>
-						<li class="last">
-							(It's an excellent idea to let the link owner know.)
-						</li>
-					</ol>
-				</div>
-			</div>
-		</div>
-	</div>
-
-</body>
-</html>
+<!doctype html>
+<html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
+<head>
+    <meta charset="utf-8" >
+    <meta name="description" content="Portfolio of Jannaee Sick">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
+    <meta itemprop="name" content="Jannaee Sick Web Portfolio">
+    <meta itemprop="description" content="Jannaee Sick Web Portfolio">
+    <link href='http://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles/components.css">
+    <title>Jannaeé Sick</title>
+</head>
+
+<body style="text-align: center; margin-top: 15%;">
+    <h1>OOOOOH NOOOOO!</h1>
+    <p>Well shoot, it looks like something went wrong. No worries, let's get you <a href="index.html">back to the homepage.</a></p>
+</body>
+</html>
