--- a/rockPaperScissors-final.html
+++ b/rockPaperScissors-final.html
@@ -3,8 +3,10 @@
 <head>
 	<title></title>
 	<style>
-	/*body{margin:0 25px 125px 25px;}*/
-	a{text-decoration: none;}
+	a {
+		text-decoration: none;
+	}
+	
 	#outergameArea{
 		width: 425px; 
 		height: 137px; 	
@@ -22,7 +24,6 @@
 		height: 110px;
 		position: relative;
 		top: 10px;
-
 	}
 
 	#computerArea p{
