refactor: Restructuring website to remove page about dogs. To be replaced by a family life page.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h4 class="g-medium-half g-wide--1"><a href="developer.html">developer</a></h4>
         <h4 class="g-medium-half g-wide--1"><a href="tinkerer.html">robotics tinkerer</a></h4>
         <h4 class="g-medium-half g-medium--last g-wide--1 g-wide--last"><a href="3dhacker.html">3D hacker</a></h4>
-        <h4 class="g-medium-half g-wide--1"><a href="animal-lover.html">animal lover</a> </h4>
+        <!--<h4 class="g-medium-half g-wide--1"><a href="family-life.html">family life</a></h4>-->
       </div>  
     </div>
   </body>
