--- a/zombie-enthusiast.html
+++ b/zombie-enthusiast.html
@@ -36,7 +36,7 @@
     <div class="code-sample">
         <div class="container-medium">
           <nav class="article-nav">
-            <a href="animal-lover.html" class="article-nav-link "><p>previous</p></a>
+            <a href="family-life.html" class="article-nav-link "><p>previous</p></a>
             <a href="/" class="article-nav-link"><p>to the begining</p></a>
           </nav>
         </div>
