refactor: Cleaning out directory of files that I don't need

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <h4 class="g-medium-half g-wide--1"><a href="family-life.html">family life</a></h4>
       </div>  
     </div>
+    <!--This website was created with Google Web Starter Kit. I selected this framework in 2014 to experiment with scss. My goal is to recreate this website by the end of the year.-->
   </body>
 </html>
