refactor: Updating the Developer intro and news about EverBank's redesign

--- a/developer.html
+++ b/developer.html
@@ -12,7 +12,6 @@
     <title>Jannaeé Sick</title>
   </head>
   <body class="page--styleguide">
-
     <div class="code-sample">
         <div class="developer-section">
           <div class="container">
@@ -21,131 +20,109 @@
           </div>
         </div>
     </div>
-
-
-     <div class="code-sample">
+    <div class="code-sample">
       <section class="styleguide__guides-section">
         <div class="guides-section-left">
-        <div class="container">
-                <section class="styleguide__page-header">
-            <div class="page-header">
-                <div class="container">
-                    <h3 class="xlarge">Introduction</h3>
-                    <p>Before scrolling any further let me tell you a little about myself.</p>
-                </div>
-            </div>
-        </section>
-          <!-- Release Note: Remove this section for the about me page -->
-
-          <p> I am an animal-loving, on-and-off-yoga-practicing, small-batch-whiskey-drinking, tinkerer-of-anything-3D-printing kind of a gal. I was born in Busan, South Korea and raised in 'Duuuuuuuval' county of Jacksonville, Florida.</p><p>I'm a graduate of <a href="http://www.duvalschools.org/stanton" target="_blank">Stanton College Preparatory High School</a> and of the <a href="http://www.unf.edu/coas/art-design/" target="_blank">University of North Florida</a>. After earning my BA in Fine Arts with a focus in graphic design I set forth into the world determined to make art. As you will find throughout this site I've littered it with projects that I've created (or at least participated in).</p>
-          <p class="small">A photo I took of our beautiful River City<img  src="/images/home.jpg"/></p>
-        </div>         
+          <div class="container">
+            <p> I am an animal-loving, on-and-off-yoga-practicing, small-batch-whiskey-drinking, tinkerer-of-anything-3D-printing kind of a gal. I was born in Busan, South Korea and raised in 'Duuuuuuuval' county of Jacksonville, Florida.</p><p>I'm a graduate of <a href="http://www.duvalschools.org/stanton" target="_blank">Stanton College Preparatory High School</a> and of the <a href="http://www.unf.edu/coas/art-design/" target="_blank">University of North Florida</a>. After earning my BA in Fine Arts with a focus in graphic design I set forth into the world determined to make art. As you will find throughout this site I've littered it with projects that I've created (or at least participated in).</p>
+            <p class="small">A photo I took of our beautiful River City<img  src="/images/home.jpg"/></p>
+          </div>         
         <section class="styleguide__page-header">
-            <div class="page-header">
-                <div class="container">
-                    <h3 class="xlarge">The Serious Stuff</h3>
-                    <p>Below are a few web development projects that I have worked on this past year. <br />Code samples can be available upon request.</p>
-                </div>
+          <div class="page-header">
+            <div class="container">
+              <h3 class="xlarge">Front-End Development Work</h3>
+              <p>Below are a few web development projects that I created in 2014. EverBank Financial was acquired in 2017 by TIAA Bank and has since been redesigned. 
+              <br/>Unfortunately, these products are no longer live.</p>
             </div>
+          </div>
         </section>
-          <ul class="guides-list container-medium">
-            <li class="guides-list__item g--half">
-
+        <ul class="guides-list container-medium">
+          <li class="guides-list__item g--half">
             <div class="primary-content">
-              
               <p class="large last">NMLS ID Directory<br />
-                  <em class="small">Front-end development<br/>Project for EverBank.com</em><br />
-                  <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
+                <em class="small">Front-end development<br/>Project for EverBank.com</em><br />
+                <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
               <img src="/images/workscreenshots/loanofficertool.jpg" />
-              <p>For this project I developed a way to import data from an HR database and display it onto our public website. The requirements for this project included allowing the table to be sortable by and dynamic. The image above features the final design of the list as it exists today.</p>
-              <p>Currently, the production version of this list is a manual process.
-              </p>  
+              <p>For this project I developed a way to import xml data from an HR database and display it onto our public website. The requirements for this project included allowing the table to be sortable and dynamic. The image above features the final design of the list as it exists today.</p>
+              <p>Currently, the production version of this list is a manual process.</p>  
               <p class="last"><a class="cta--primary" href="https://www.everbank.com/lending/mortgage-loan-officers" target="_blank">view site</a></p>
             </div>
-            </li>
-            <li class="guides-list__item g--half g--last">
+          </li>
+          <li class="guides-list__item g--half g--last">
             <div class="primary-content">
               <p class="large last">Remember User ID<br />
-                  <em class="small">Front-end development<br />
-                  Project for EverBank.com</em><br />
-                  <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
+                <em class="small">Front-end development<br />Project for EverBank.com</em><br />
+                <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
               <img src="/images/workscreenshots/rememberme.svg" />
               <p>This assignment required creating a method to allow online account users to store away their user id's for future sessions. It was determined this feature should only support users of modern browsers. As a result, I opted to take advantage of using html5 local storage.</p>  
               <p class="last">The development for this enhancement is complete and the launch of this feature had been postponed for a future date.</p>
               <!-- <p class="last"><a class="cta--primary" href="">view site</a></p> -->
             </div>
-            </li>
-          </ul>
+          </li>
+        </ul>
 
-          <ul class="guides-list container-medium">
-            <li class="guides-list__item g--half">
-            <div class="primary-content">
-              <p class="large last">Mediaplex Retargeting Ads<br/>            
-                  <em class="small">Front-end development<br />
-                  Project for EverBank.com</em><br />
-                  <em class="small">Technology: javascript, html, Raphael.js and Animate.css</em>
-              </p>
-              <img src="/images/workscreenshots/dynamicbanner.svg">
-              <p class="small">These rates do not reflect actual rates of EverBank products. This is a sample and banner only.</p>
-              <p>
-                One of the fun projects I had a chance to work on as a developer for EverBank. While this screenshot doesn't do the final design justice, I worked with a designer to create a banner ad that would dynamically pull in and display rates from our rates source. 
-              </p>
-              <p>
-                My first attempt at creating this banner included using Raphael JS framework. However, since these are retargeting ads, meant to live on various sites, the file needed to be all encompassing and the library proved to be too big. My fall back solution involved recreating these ads to use only css for animation, which I achieved by leveraging the Animate.css library.
-              </p>
-              <p class="last"> <a class="cta--primary" href="dynamicBanner.html" target="_blank">view sample</a></p>
-            </div>
-            </li>
-            <li class="guides-list__item g--half g--last">
+        <ul class="guides-list container-medium">
+          <li class="guides-list__item g--half">
+          <div class="primary-content">
+            <p class="large last">Mediaplex Retargeting Ads<br/>            
+                <em class="small">Front-end development<br />
+                Project for EverBank.com</em><br />
+                <em class="small">Technology: javascript, html, Raphael.js and Animate.css</em>
+            </p>
+            <img src="/images/workscreenshots/dynamicbanner.svg">
+            <p class="small">These rates do not reflect actual rates of EverBank products. This is a sample and banner only.</p>
+            <p>
+              One of the fun projects I had a chance to work on as a developer for EverBank. While this screenshot doesn't do the final design justice, I worked with a designer to create a banner ad that would dynamically pull in and display rates from our rates source. 
+            </p>
+            <p>
+              My first attempt at creating this banner included using Raphael JS framework. However, since these are retargeting ads, meant to live on various sites, the file needed to be all encompassing and the library proved to be too big. My fall back solution involved recreating these ads to use only css for animation, which I achieved by leveraging the Animate.css library.
+            </p>
+            <p class="last"> <a class="cta--primary" href="dynamicBanner.html" target="_blank">view sample</a></p>
+          </div>
+          </li>
+          <li class="guides-list__item g--half g--last">
             <div class="primary-content">
               <p class="large last">Downloadable Rates Table<br/>            
-                  <em class="small">Front-end development<br />
-                  Project for EverBank.com</em><br />
-                  <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
+                <em class="small">Front-End Development<br />
+                Project for EverBank.com</em><br />
+                <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
               <img src="/images/workscreenshots/ratesTable.jpg">
               <p>At times, what a client asks for isn't necessarily what is truly needed. I find in these moments, it is our role as a developer to identify these situations and for us to consider responding with an alternate approach. In this instance of the rates table, it was requested of our team to supply rates to a third party vendor. The vendor would require daily refreshed rates, preferrably in a csv file in order for them to feed their web banners. </p>
               <p>I built a tool that provided unlimited access to the most up to date rates. This tool features a download button that converts the list into a downladable csv or txt file.</p>               
               <p class="last"><a class="cta--primary" href="http://everbank.com/_campaigns/services/rates-download-tool" target="_blank">view site</a></p> 
             </div>
-            </li>
+          </li>
 
             <li class="guides-list__item g--half">
-              <div class="primary-content">
-              <p class="large last">A Pure js Game<br/>            
-                  <em class="small">Front-end development<br />
-                  Project created for self</em><br />
-                  <em class="small">Technology: javascript, html, css</em>
-              </p>              
-              <img src="/images/workscreenshots/rockpaperscissors.svg">
-              <p>
-               A simple excercise using nothing more than javascript and css to create a game of rock paper scissors. While the hand illustrations are not mine, I would like to recreate the images and redesign the game in Snap or Raphael js.
-              </p>  
-                
-              <p class="last"><a class="cta--primary" href="rockPaperScissors-final.html" target="_blank">play</a></p>
-              </div>
+            <div class="primary-content">
+            <p class="large last">A Pure js Game<br/>            
+            <em class="small">Front-end development<br />
+            Project created for self</em><br />
+            <em class="small">Technology: javascript, html, css</em>
+            </p>              
+            <img src="/images/workscreenshots/rockpaperscissors.svg">
+            <p>
+            A simple excercise using nothing more than javascript and css to create a game of rock paper scissors. While the hand illustrations are not mine, I would like to recreate the images and redesign the game in Snap or Raphael js.
+            </p>  
+            <p class="last"><a class="cta--primary" href="rockPaperScissors-final.html" target="_blank">play</a></p>
+            </div>
             </li>
-          </ul>  
-          </div>        
+        </ul>  
+      </div>        
       </section>
     </div>
-
-
-  <footer id="g-footer" class="tinkerer-section">
-    <div class="code-sample">
-        <div class="container-medium">
-          <nav class="article-nav">
-            <a href="/" class="article-nav-link">
-              <p>previous</p>
-            </a>
-            <a href="tinkerer.html" class="article-nav-link">
-              <p>next</p>
-            </a>
-          </nav>
-        </div>
-    </div>
-  </footer>
+    <footer id="g-footer" class="tinkerer-section">
+      <div class="code-sample">
+          <div class="container-medium">
+            <nav class="article-nav">
+              <a href="/" class="article-nav-link"><p>previous</p></a>
+              <a href="tinkerer.html" class="article-nav-link"><p>next</p></a>
+            </nav>
+          </div>
+      </div>
+    </footer>
   </body>
 </html>
