refactor: Modifying content information

--- a/developer.html
+++ b/developer.html
@@ -16,7 +16,7 @@
         <div class="developer-section">
           <div class="container">
             <img src="/images/ego-developer.svg">
-            <h3 class="xlarge"><a href="#"><em>the developer</em></a></h3>
+            <h3 class="xlarge"><a href="#"><em>front-end developer</em></a></h3>
           </div>
         </div>
     </div>
@@ -26,8 +26,8 @@
         <section class="styleguide__page-header">
           <div class="page-header">
             <div class="container">
-              <h3 class="xlarge">Front-End Development Work</h3>
-              <p>Below are a few web development projects that I created in 2014. EverBank Financial was acquired in 2017 by TIAA Bank and has since been redesigned. 
+              <h3>Front-End Development Portfolio</h3>
+              <p class="small">EverBank Financial was acquired in 2017 by TIAA Bank and has since been redesigned.<p> 
               <br/>Unfortunately, these products are no longer live.</p>
             </div>
           </div>
@@ -36,25 +36,21 @@
           <li class="guides-list__item g--half">
             <div class="primary-content">
               <p class="large last">NMLS ID Directory<br />
-                <em class="small">Front-end development<br/>Project for EverBank.com</em><br />
+                <em class="small">Front-End development<br/>Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
               <img src="/images/workscreenshots/loanofficertool.jpg" />
-              <p>For this project I developed a way to import xml data from an HR database and display it onto our public website. The requirements for this project included allowing the table to be sortable and dynamic. The image above features the final design of the list as it exists today.</p>
-              <p>Currently, the production version of this list is a manual process.</p>  
-              <p class="last"><a class="cta--primary" href="https://www.everbank.com/lending/mortgage-loan-officers" target="_blank">view site</a></p>
+              <p>I was tasked to create a way to import xml data from an HR database and display it onto our public website. The major two requirements for this project was to allow the table to be sortable and dynamic.</p>
             </div>
           </li>
           <li class="guides-list__item g--half g--last">
             <div class="primary-content">
               <p class="large last">Remember User ID<br />
-                <em class="small">Front-end development<br />Project for EverBank.com</em><br />
+                <em class="small">Front-End development<br />Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
               <img src="/images/workscreenshots/rememberme.svg" />
               <p>This assignment required creating a method to allow online account users to store away their user id's for future sessions. It was determined this feature should only support users of modern browsers. As a result, I opted to take advantage of using html5 local storage.</p>  
-              <p class="last">The development for this enhancement is complete and the launch of this feature had been postponed for a future date.</p>
-              <!-- <p class="last"><a class="cta--primary" href="">view site</a></p> -->
             </div>
           </li>
         </ul>
@@ -73,7 +69,7 @@
               One of the fun projects I had a chance to work on as a developer for EverBank. While this screenshot doesn't do the final design justice, I worked with a designer to create a banner ad that would dynamically pull in and display rates from our rates source. 
             </p>
             <p>
-              My first attempt at creating this banner included using Raphael JS framework. However, since these are retargeting ads, meant to live on various sites, the file needed to be all encompassing and the library proved to be too big. My fall back solution involved recreating these ads to use only css for animation, which I achieved by leveraging the Animate.css library.
+              My first attempt at creating this banner included using Raphael JS framework. However, since these would have to live on various sites, the files had to be all encompassing. The Raphael library proved to be too large. My fall back solution involved creating ads built with css for animation, which I achieved by leveraging the Animate.css library.
             </p>
             <p class="last"> <a class="cta--primary" href="dynamicBanner.html" target="_blank">view sample</a></p>
           </div>
