refactor: Added absolute paths in attempt to stop the 'unsafe scripts' error occuring in browser

--- a/developer.html
+++ b/developer.html
@@ -15,7 +15,7 @@
     <div class="code-sample">
         <div class="developer-section">
           <div class="container">
-            <img src="/images/ego-developer.svg">
+            <img src="https://jannaee.github.io/images/ego-developer.svg">
             <h3 class="xlarge"><a href="#"><em>front-end developer</em></a></h3>
           </div>
         </div>
@@ -39,7 +39,7 @@
                 <em class="small">Front-End development<br/>Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
-              <img src="/images/workscreenshots/loanofficertool.jpg" />
+              <img src="https://jannaee.github.io/images/workscreenshots/loanofficertool.jpg" />
               <p>I was tasked to create a way to import xml data from an HR database and display it onto our public website. The major two requirements for this project was to allow the table to be sortable and dynamic.</p>
             </div>
           </li>
@@ -49,7 +49,7 @@
                 <em class="small">Front-End development<br />Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
-              <img src="/images/workscreenshots/rememberme.svg" />
+              <img src="https://jannaee.github.io/images/workscreenshots/rememberme.svg" />
               <p>This assignment required creating a method to allow online account users to store away their user id's for future sessions. It was determined this feature should only support users of modern browsers. As a result, I opted to take advantage of using html5 local storage.</p>  
             </div>
           </li>
@@ -63,7 +63,7 @@
                 Project for EverBank.com</em><br />
                 <em class="small">Technology: javascript, html, Raphael.js and Animate.css</em>
             </p>
-            <img src="/images/workscreenshots/dynamicbanner.svg">
+            <img src="https://jannaee.github.io/images/workscreenshots/dynamicbanner.svg">
             <p class="small">These rates do not reflect actual rates of EverBank products. This is a sample and banner only.</p>
             <p>
               One of the fun projects I had a chance to work on as a developer for EverBank. While this screenshot doesn't do the final design justice, I worked with a designer to create a banner ad that would dynamically pull in and display rates from our rates source. 
@@ -71,7 +71,7 @@
             <p>
               My first attempt at creating this banner included using Raphael JS framework. However, since these would have to live on various sites, the files had to be all encompassing. The Raphael library proved to be too large. My fall back solution involved creating ads built with css for animation, which I achieved by leveraging the Animate.css library.
             </p>
-            <p class="last"> <a class="cta--primary" href="dynamicBanner.html" target="_blank">view sample</a></p>
+            <p class="last"> <a class="cta--primary" href="https://jannaee.github.io/dynamicBanner.html" target="_blank">view sample</a></p>
           </div>
           </li>
           <li class="guides-list__item g--half g--last">
@@ -81,10 +81,9 @@
                 Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
-              <img src="/images/workscreenshots/ratesTable.jpg">
+              <img src="https://jannaee.github.io/images/workscreenshots/ratesTable.jpg">
               <p>At times, what a client asks for isn't necessarily what is truly needed. I find in these moments, it is our role as a developer to identify these situations and for us to consider responding with an alternate approach. In this instance of the rates table, it was requested of our team to supply rates to a third party vendor. The vendor would require daily refreshed rates, preferrably in a csv file in order for them to feed their web banners. </p>
               <p>I built a tool that provided unlimited access to the most up to date rates. This tool features a download button that converts the list into a downladable csv or txt file.</p>               
-              <p class="last"><a class="cta--primary" href="http://everbank.com/_campaigns/services/rates-download-tool" target="_blank">view site</a></p> 
             </div>
           </li>
 
@@ -95,11 +94,11 @@
             Project created for self</em><br />
             <em class="small">Technology: javascript, html, css</em>
             </p>              
-            <img src="/images/workscreenshots/rockpaperscissors.svg">
+            <img src="https://jannaee.github.io/images/workscreenshots/rockpaperscissors.svg">
             <p>
             A simple excercise using nothing more than javascript and css to create a game of rock paper scissors. While the hand illustrations are not mine, I would like to recreate the images and redesign the game in Snap or Raphael js.
             </p>  
-            <p class="last"><a class="cta--primary" href="rockPaperScissors-final.html" target="_blank">play</a></p>
+            <p class="last"><a class="cta--primary" href="https://jannaee.github.io/rockPaperScissors-final.html" target="_blank">play</a></p>
             </div>
             </li>
         </ul>  
@@ -111,7 +110,7 @@
           <div class="container-medium">
             <nav class="article-nav">
               <a href="/" class="article-nav-link"><p>previous</p></a>
-              <a href="tinkerer.html" class="article-nav-link"><p>next</p></a>
+              <a href="https://jannaee.github.io/tinkerer.html" class="article-nav-link"><p>next</p></a>
             </nav>
           </div>
       </div>
