refactor: Updated background color

--- a/developer.html
+++ b/developer.html
@@ -27,7 +27,7 @@
           <div class="page-header">
             <div class="container">
               <h3>Front-End Development Portfolio</h3>
-              <p class="small">EverBank Financial was acquired in 2017 by TIAA Bank and has since been redesigned.<p> 
+              <p class="small">EverBank Financial was acquired in 2017 by TIAA Bank and has since been redesigned.
               <br/>Unfortunately, these products are no longer live.</p>
             </div>
           </div>
