refactor: Adding in restaruant reviews project

--- a/developer.html
+++ b/developer.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
+<html lang="en" class="no-js no-touch">
   <head>
     <meta charset="utf-8" >
     <meta name="description" content="Portfolio of Jannaee Sick">
@@ -26,13 +26,21 @@
         <section class="styleguide__page-header">
           <div class="page-header">
             <div class="container">
-              <h3>Front-End Development Portfolio</h3>
-              <p class="small">EverBank Financial was acquired in 2017 by TIAA Bank and has since been redesigned.
-              <br/>Unfortunately, these products are no longer live.</p>
+              <p class="small">Please take a look at some of the projects that I have created over the years. Please note that all of the EverBank Financial projects are no longer live since they were recently acquired.</p>
             </div>
           </div>
         </section>
         <ul class="guides-list container-medium">
+          <li class="guides-list__item g--half">
+            <div class="primary-content">
+              <p class="large last">Restaurant Reviews Mobile Application<br />
+                <em class="small">Front-End development<br/>Project for Udacity.com</em><br />
+                <em class="small">Technology: html, css, javascript</em>
+              </p>
+              <img src="https://jannaee.github.io/images/screenshots/RRA-largeViewport.PNG" /><img src="https://jannaee.github.io/images/screenshots/RRA-smviewport.PNG" />
+              <p>I was tasked to create a way to import xml data from an HR database and display it onto our public website. The major two requirements for this project was to allow the table to be sortable and dynamic.</p>
+            </div>
+          </li>
           <li class="guides-list__item g--half">
             <div class="primary-content">
               <p class="large last">NMLS ID Directory<br />
